Actions
Bug #10132
closedsmatch fixes for MDB
Start date:
2018-12-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
smatch identified various issues with code in usr/src/cmd/mdb
Updated by Electric Monk over 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit d75f3745ad3c36431063bb316666f4d316eabc8c
commit d75f3745ad3c36431063bb316666f4d316eabc8c Author: John Levon <john.levon@joyent.com> Date: 2019-01-30T23:31:43.000Z 10132 smatch fixes for MDB Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions