usr/src/cmd/mdb/common/mdb/mdb_nm.c
@@ -23,6 +23,10 @@
  * Use is subject to license terms.
  */
 
+/*
+ * Copyright (c) 2018, Joyent, Inc.
+ */
+
 #include <sys/elf.h>
 #include <sys/elf_SPARC.h>
 
@@ -785,7 +789,7 @@ cmd_nm(uintptr_t addr, uint_t flags, int argc, const mdb_arg_t *argv)
 		for (symp = syms; nsyms-- != 0; symp++) {
 			nii.nii_fp = symp->nm_fp;
 
-			callback(&nii, &symp->nm_sym, symp->nm_name,
+			(void) callback(&nii, &symp->nm_sym, symp->nm_name,
 			    &symp->nm_si, symp->nm_object);
 		}
 
