usr/src/cmd/mdb/intel/mdb/proc_amd64dep.c
@@ -309,8 +309,6 @@ fpcw2str(uint32_t cw, char *buf, size_t nbytes)
 	/*
 	 * Decode precision, rounding, and infinity options in control word.
 	 */
-	if (cw & FPSIG24)
-		p += mdb_snprintf(p, (size_t)(end - p), "|SIG24");
 	if (cw & FPSIG53)
 		p += mdb_snprintf(p, (size_t)(end - p), "|SIG53");
 	if (cw & FPSIG64)
